force-app/main/default/objects/Conservation_Area__c.object
<CustomObject>
    <description>Conservation Areas - replaces the Conservation Area Record Type that was included in the Accounts object.</description>
    <fields>
        <fullName>Acres_Engaged_in_Conservation__c</fullName>
        <label>Acres Engaged in Conservation</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <description>Number of acres within the conservation area</description>
        <label>Acres</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Description__c</fullName>
        <label>Area Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Climate_Change_Stress_Index__c</fullName>
        <label>Climate Change Stress Index</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <inlineHelpText>County/Counties where conservation lies.</inlineHelpText>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County/Counties where conservation lies.</description>
        <label>XDeprecated: County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dororado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Humboldt/Mendocino</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eco__c</fullName>
        <label>Ecoregion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA Central Coast</fullName>
                </value>
                <value>
                    <fullName>CA Columbia Plateau</fullName>
                </value>
                <value>
                    <fullName>CA Great Basin</fullName>
                </value>
                <value>
                    <fullName>CA Klamath Mountains</fullName>
                </value>
                <value>
                    <fullName>CA East Cascades-Modoc</fullName>
                </value>
                <value>
                    <fullName>CA Mojave Desert</fullName>
                </value>
                <value>
                    <fullName>CA North Coast</fullName>
                </value>
                <value>
                    <fullName>CA Northern Current</fullName>
                </value>
                <value>
                    <fullName>CA Sierra Nevada</fullName>
                </value>
                <value>
                    <fullName>CA Sonoran Desert</fullName>
                </value>
                <value>
                    <fullName>CA South Coast</fullName>
                </value>
                <value>
                    <fullName>CA Southern Current</fullName>
                </value>
                <value>
                    <fullName>CA West Cascades</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>CA Great Central Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TNC_Level_of_Engagement__c</fullName>
        <label>TNC Level of Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Platform</fullName>
                </value>
                <value>
                    <fullName>TNC Selective</fullName>
                </value>
                <value>
                    <fullName>Partner Support</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
                <value>
                    <fullName>TNC Scoping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conservation Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acres__c</columns>
        <columns>Eco__c</columns>
        <columns>County_Global__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conservation Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conservation Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>